# schir-project

./: .gitignore  CMakeLists.txt  README.md  cppdock.json
geomalg/: .gitignore  CMakeLists.txt  cppdock.json
geomalg/include/geomalg/: Dialect.h  Geomalg.td  Metric.h  Passes.h  Passes.td  Type.h  base.sld
geomalg/lib/Geomalg/: CMakeLists.txt  Dialect.cpp  Geomalg.cpp  Lower.cpp  Passes.cpp  Type.cpp
geomalg/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
geomalg/test/Base/: add.cpp  define-func.scm  reflect.cpp  sum.cpp
geomalg/test/Pass/: geomalg-expand-vp.mlir  geomalg-expand.mlir  geomalg-to-llvm.mlir
geomalg/tools/geomalg-opt/: CMakeLists.txt  geomalg_opt_main.cpp
heavy/: CMakeLists.txt
heavy/cmake/modules/: AddHeavy.cmake  CMakeLists.txt
heavy/debug/: double_cont.py
heavy/include/heavy/: Builtins.h  CMakeLists.txt  Clang.h  Context.h  ContinuationStack.h  Dialect.h  EvaluationStack.h  Heap.h  HeavyDialect.td  HeavyDialectTypes.td  HeavyScheme.h  Lexer.h  Mangle.h  Mlir.h  MlirHelper.h  Module.h  Nbdl.h  OpEval.h  OpGen.h  Ops.td  Parser.h  PatternMatcher.h  Source.h  SourceFileStorage.h  SourceManager.h  TrashHeap.h  Value.h  ValueVisitor.h  base.sld  mlir.sld
heavy/include/heavy/Dialect/: CMakeLists.txt  Dialect.td  Passes.h  Passes.td  Types.td
heavy/include/heavy/base/: int.sld  list.sld  r7rs-syntax.sld
heavy/include/nbdl_gen/: Dialect.h  Nbdl.td  PathMangle.h
heavy/lib/: Builtins.cpp  CMakeLists.txt  Context.cpp  Dialect.cpp  Heap.cpp  HeavyScheme.cpp  Lexer.cpp  Mangle.cpp  Mlir.cpp  MlirHelper.cpp  Nbdl.cpp  NbdlDialect.cpp  NbdlWriter.cpp  OpEval.cpp  OpEval.cpp.bak  OpGen.cpp  Parser.cpp  PatternTemplate.h  Quasiquote.cpp  SourceFileStorage.cpp  SourceManager.cpp  TemplateBase.h  TemplateGen.h
heavy/lib/Dialect/: Passes.cpp
heavy/lib/Nbdl/: NbdlDialect.cpp  NbdlWriter.cpp
heavy/plugins/HeavyClang/: CMakeLists.txt  HeavyClang.cpp
heavy/plugins/HelloWorld/: CMakeLists.txt  hello_world.cpp
heavy/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
heavy/test/Clang/: import.cpp  source-loc.cpp
heavy/test/Clang/Inputs/my/: lib.sld
heavy/test/Evaluate/: apply.scm  begin.scm  call.scm  case-lambda.scm  cond.scm  create-op.scm  define-syntax.scm  dynamic-wind.scm  export.scm  if.scm  import.scm  lambda.scm  list.scm  load-module.scm  source-loc.scm  string.scm  types.scm  values.scm  vector.scm
heavy/test/Lexer/: comments.scm  string_literal.scm  unterminated_comment.scm  unterminated_string_literal.scm
heavy/test/Nbdl/: apply_action.scm  close_previous_scope.scm  context.cpp  context.scm  context_error.cpp  match_params.scm
heavy/test/Parser/: character.scm  number.scm  string.scm  symbol.scm  unexpected_eof.scm  vector.scm
heavy/test/Pass/: heavy-strip-global-bindings.mlir
heavy/test/Plugin/: hello_world.cpp  hello_world.scm
heavy/test/Quasiquote/: unquote-splicing.scm  unquote.scm
heavy/tools/heavy/: CMakeLists.txt  heavy_main.cpp
heavy/tools/heavy-opt/: CMakeLists.txt  heavy_opt_main.cpp
heavy/tools/heavy-scheme/: CMakeLists.txt  heavy_main.cpp
heavy/unittests/: CMakeLists.txt  ContextTest.cpp  MangleTest.cpp  ValueTest.cpp
lib/Geomalg/: CMakeLists.txt  Dialect.cpp  Geomalg.cpp  Lower.cpp  Passes.cpp  Type.cpp
nbdl/: CMakeLists.txt  (+1 more)
nbdl/cmake/modules/: CMakeLists.txt  NbdlConfig.cmake.in
schir/: CMakeLists.txt
schir/cmake/modules/: AddSchir.cmake  CMakeLists.txt  SchirConfig.cmake.in  SchirConfig.install.cmake.in
schir/debug/: double_cont.py
schir/include/nbdl_gen/: Dialect.h  Nbdl.td  PathMangle.h
schir/include/schir/: Builtins.h  CharInfo.h  Clang.h  Context.h  ContinuationStack.h  Dialect.h  Heap.h  Lexer.h  Mangle.h  Mlir.h  MlirHelper.h  Nbdl.h  OpGen.h  Parser.h  SCHIR_ASSERT.h  SchirScheme.h  Source.h  SourceFileStorage.h  SourceManager.h  TrashHeap.h  Value.h  ValueVisitor.h  base.sld  mangle.sld  mlir.sld
schir/include/schir/Dialect/: CMakeLists.txt  Dialect.td  Passes.h  Passes.td  Types.td
schir/include/schir/base/: int.sld  list.sld  r7rs-syntax.sld
schir/include/schir/llvm/: pass.sld
schir/include/schir/mlir/: all-passes.sld
schir/lib/: Builtins.cpp  CMakeLists.txt  CharInfo.cpp  Context.cpp  Dialect.cpp  Heap.cpp  Lexer.cpp  Mangle.cpp  Mlir.cpp  MlirHelper.cpp  Nbdl.cpp  OpEval.cpp  OpGen.cpp  Parser.cpp  PatternTemplate.h  Quasiquote.cpp  SchirScheme.cpp  SourceFileStorage.cpp  SourceManager.cpp  TemplateBase.h  TemplateGen.h
schir/lib/Dialect/: Passes.cpp
schir/lib/Nbdl/: NbdlDialect.cpp  NbdlWriter.cpp
schir/plugins/HelloWorld/: CMakeLists.txt  hello_world.cpp
schir/plugins/SchirClang/: CMakeLists.txt  ClangUtil.h  LexerWriter.h  PassPlugin.cpp  SchirClang.cpp  TemplateProbe.h
schir/plugins/SchirLLVMPass/: CMakeLists.txt  SchirLLVMPass.cpp
schir/plugins/SchirMangle/: CMakeLists.txt  SchirMangle.cpp
schir/plugins/SchirMlirAllPasses/: CMakeLists.txt  SchirMlirAllPasses.cpp
schir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
schir/test/Clang/: error-note.cpp  expr-type.cpp  flush-tokens.cpp  import.cpp  llvm-pass-plugin.cpp  parse-type.cpp  source-loc.cpp  template-probe.cpp
schir/test/Evaluate/: apply.scm  begin.scm  call.scm  case-lambda.scm  cond.scm  create-op.scm  define-syntax.scm  dynamic-wind.scm  error-note.scm  export.scm  format-string.scm  if.scm  import.scm  lambda.scm  list.scm  load-module.scm  source-loc.scm  string.scm  syntax-stack.scm  types.scm  values.scm  vector.scm
schir/test/Lexer/: comments.scm  unterminated_comment.scm  unterminated_string_literal.scm
schir/test/Nbdl/: close_previous_scope.scm  context.scm  match_params.scm
schir/test/Parser/: character.scm  number.scm  string.scm  symbol.scm  unexpected_eof.scm  vector.scm
schir/test/Pass/: schir-strip-global-bindings.mlir
schir/test/Plugin/: hello_world.cpp  hello_world.scm  mangle.scm
schir/test/Quasiquote/: unquote-splicing.scm  unquote.scm
schir/tools/schir-opt/: CMakeLists.txt  schir_opt_main.cpp
schir/tools/schir-scheme/: CMakeLists.txt  schir_main.cpp
schir/unittests/: CMakeLists.txt  ContextTest.cpp  MangleTest.cpp  ValueTest.cpp
(+64 files in other folders)
